user_practice.txt
# Paste your interactive Python practice sesssion here
#Practice starts#
jakieldavid@Jakiels-MacBook ~ % python3
Python 3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 45+72
117
>>> x=7
>>> y=3
>>> x+y
10
>>> total=x+y
>>> total
10
>>> 
>>> typ(x)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'typ' is not defined. Did you mean: 'type'?
>>> type(x)
<class 'int'>
>>> type(10.5)
<class 'float'>
>>> total=10.8+12.2+0.2
>>> total
23.2
>>> 7*4
28
>>> 2**10
1024
>>> 9**(1/2)
3.0
>>> print()

>>> 7/4
1.75
>>> print()

>>> 7//4
1
>>> 3//5
0
>>> 14//7
2
>>> -13/4
-3.25
>>> -13//4
-4
>>> 123/0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ZeroDivisionError: division by zero
>>> z+7
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'z' is not defined
>>> 17%5
2
>>> 7.5%3.5%
  File "<stdin>", line 1
    7.5%3.5%
            ^
SyntaxError: invalid syntax
>>> 7.5 % 3.5
0.5
>>> 10*(5+3)
80
>>> 10*5+3
53
>>> print('Welcome to Python!')
Welcome to Python!
>>> print("Welcome to Python!")
Welcome to Python!
>>> print('Welcome\nto\n\nPython!')
Welcome
to

Python!
>>> print('this is a longer string, so w  \
... split it over two lines')
this is a longer string, so w  split it over two lines
>>> print('sum is', 7+3)
sum is 10
>>> name=input("What's your name? "
... )
What's your name? Jak
>>> name
'Jak'
>>> favorite_animal=input("what's your favorite animal? ")
what's your favorite animal? tiger/orca
>>> favorite_animal
'tiger/orca'
>>> print(name)
Jak
>>> print(favorite_animal)
tiger/orca
>>> valiue1=inpute('Enter first number: )
  File "<stdin>", line 1
    valiue1=inpute('Enter first number: )
                   ^
SyntaxError: unterminated string literal (detected at line 1)
>>> value1=input('Enter first number: ')
Enter first number: 1
>>> value2=input('Enter second number: ')
Enter second number: 8
>>> value3=input('Enter third number: ')
Enter third number: 96
>>> value1+value2+value3
'1896'
>>> value=input('Enter an integer: ')
Enter an integer: 34
>>> value=int(value)
>>> value
34
>>> another_value=int(input('Enter an integer: '))
Enter an integer: 43
>>> value+another_value
77
>>> bad_value=int(input('Enteger another integer: '))
Enteger another integer: hey
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: 'hey'
>>> int(111.1)
111